# piksel

./: .gitignore  CMakeLists.txt  CMakePresets.json  F1_bolid.glb  LICENSE  README.md  pikselConfig.cmake.in  suppressions.supp  vcpkg-configuration.json  vcpkg.json
assets/models/: tor.glb
include/piksel/: IDrawable.hh  app.hh  camera.hh  color.hh  config.hh.in  cube.hh  cube_manager.hh  exception.hh  glad_initializer.hh  graphics.hh  gui_manager.hh  gui_object.hh  image.hh  info_panel.hh  line.hh  liner.hh  mesh.hh  model.hh  object.hh  shader.hh  texture.hh  vehicle_model.hh  vertex.hh  window.hh  wireframe.hh
shaders/: default.frag  default.vert  line.frag  line.vert  line_es.frag  line_es.vert  single_color.vert  single_color_es.frag  single_color_es.vert  texture.frag
src/: app.cc  camera.cc  color.cc  cube.cc  cube_manager.cc  exception.cc  glad.c  graphics.cc  gui_manager.cc  gui_object.cc  image.cc  liner.cc  mesh.cc  model.cc  object.cc  shader.cc  texture.cc  tinygltf_impl.cc  vehicle_model.cc  window.cc  wireframe.cc
tests/: chuj_test.cc  colider_test.cc  copy_test.cc  gfx_test.cc  imgui_test.cc  line_test.cc  mem_test.cc  model_load_test.cc  opengl_test.cc  tinygltf_test.cc  vehicle_test.cc
